# OTUS_Homework_02

./: .travis.yml  CMakeLists.txt  OTUS_Homework_02.sln  OTUS_Homework_02.vcxproj  OTUS_Homework_02.vcxproj.filters  README.md  a_plus_b.cpp  a_plus_b.h  ip_filter.cpp  ip_filter.h  localization_problem.cpp  localization_problem.h  main.cpp  olympiad.cpp  olympiad.h  reverse_sqrt.cpp  reverse_sqrt.h  sulfide_mass.cpp  sulfide_mass.h  test_a_plus_b.cpp  test_localization_problem.cpp  test_main.cpp  test_olympiad.cpp  test_reverse_sqrt.cpp  test_sulfide_mass.cpp  utils.cpp  utils.h
OTUS_Homework_02/: OTUS_Homework_02.vcxproj
